--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
  <html>
  <head>
- 	<title>GCI bot</title>
+ 	<title>Jeewal Kunwar</title>
  </head>
  <body>
  	<p> Hello Everyone </p>
