--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
- <!DOCTYPE html>
- <html>
- <head>
- 	<title>Jeewal Kunwar</title>
- </head>
- <body>
- 	<p> Hello Everyone </p>
- <script type="text/javascript" id="susi-bot-script" data-userid="35be7ecf62d1a5eb453f4350b460ad03" data-group="Communication" data-language="en" data-skill="Conveyer" src="https://skills.susi.ai/susi-chatbot.js" ></script>
- </body>
- </html>
- 
+<!DOCTYPE html>
+<html>
+<head>
+	<title> Jeewal </title>
+	<style>
+body {
+    background-image: url("https://github.com/Jeewal/Jeewal.github.io/blob/master/47470994_1169551619878048_6490765894401130496_n.jpg");
+    background-repeat: no-repeat;
+    background-position: middle;
+    margin-right: 200px;
+    background-attachment: fixed;
+}
+</style>
+<style>
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+</head>
+<body>
+<H1> Jeewal Kunwar </H1>
+<p> Hello Everyone ! <br>
+ My name is Jeewal Kunwar. I am 17 years old and I am from Nepal. <br> I've made this page to keep inforamtions about me. So, if you'd like to know me, you can get to know me from here.  
+</p>
+<p> My address: Dhulikhel, Kavrepalanchowk, Nepal <br> 
+	Education: <br>
+	Current/Ongoing: Class 12 studying Science <br> National Education Board(NEB) Nepal <br> 
+	Passed : S.E.E Examination (Grade 10) <br> National Education Board (NEB) Nepal <br>
+	Languages : Nepali (native)<br>
+	English (Fluent) <br>
+	Hindi (Fluent) <br>
+	Swedish (Beginner)
+</p>
+<H2> My Works </H2>
+<p> My works are available on Github. Please have a look through my profile.</p>
+<br>
+
+
+
+</body>
+</html>
