--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ body {
 <H2> My Works </H2>
 <p> My works are available on Github. Please have a look through my profile.</p>
 <br>
-
+<form>
+<input class="MyButton" type="button" value="Click Here to get to my Github Profile" onclick="href='https://github.com/Jeewal'" />
+</form>
 
 
 </body>
