--- a/index.html
+++ b/index.html
@@ -1,7 +1,120 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-IN" dir="ltr">
 <head>
-	<title> Portfolio </title>
-	<style>
+    <title>Do you wanna go out with me?</title>
+    <meta charset="utf-8">
+    <meta name="author" content="SidPro"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+    <meta name="description" content="Do you wanna go out with me? A website to invite your lover for a date by Collegeek online learning platform."/>
+    <meta name="keywords" content="Do you wanna go out with me,A website to invite your lover for a date,Collegeek,Collegeek.com,learning programing,programming tutorial,tools,Live_DHTML,Convertor,microprocessor"/>
+    
+    <!-- Combined CSS -->
+    <style>
+        body {
+            height: 90vh;
+            background-color: #F8C8DC;
+        }
+        #ans {
+            display: none;
+        }
+        #ansvideo, #novideo {
+            visibility: hidden;
+        }
+        #noButton {
+            position: absolute;
+            margin-left: 150px;
+            transition: 0.5s;
+        }
+        #yesButton {
+            position: absolute;
+            margin-right: 150px;
+        }
+        .header_text {
+            font-family: 'Nunito';
+            font-size: 50px;
+            font-weight: bold;
+            color: black;
+            text-align: center;
+            margin-top: 20px;
+            margin-bottom: 0px;
+        }
+        .buttons {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px;
+            margin-left: 20px;
+        }
+        .btn {
+            background-color: #FFB6C1;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border: none;
+            border-radius: 12px;
+            transition: background-color 0.3s ease;
+        }
+        .btn:hover {
+            background-color: #ff8e9f;
+        }
+        .gif_container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .qrimage {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 350px;
+            height: auto;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            cursor: pointer;
+        }
+        @media only screen and (max-width: 600px) {
+            .header_text {
+                font-size: 40px;
+            }
+            .qrimage {
+                max-width: 50%;
+                padding-left: 25%;
+            }
+        }
+    </style>
+
+    <!-- Icons -->
+    <link rel="apple-touch-icon" sizes="57x57" href="image/icons/favicon-57x57.png">
+    <!-- Other icon links remain the same -->
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EWCZHDCG9"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-3EWCZHDCG9');
+    </script>
+</head>
+<body>
+    <!-- Body content remains the same -->
+    <div id="ask" class="container">
+        <!-- Original body content here -->
+    </div>
+    <div id="ans" class="container">
+        <!-- Original answer content here -->
+    </div>
+
+    <!-- Combined JavaScript -->
+    <script>
+        // Original JavaScript code here
+    </script>
 </body>
 </html>
