--- a/index.html
+++ b/index.html
@@ -1,95 +1,76 @@
 <!DOCTYPE html>
 <html lang="en-IN" dir="ltr">
-  <head>
+<head>
     <title>Do you wanna go out with me?</title>
     <meta charset="utf-8">
     <meta name="author" content="SidPro"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <meta name="description" content="Do you wanna go out with me? A website to invite your lover for a date by Collegeek online learning platform."/>
-    <meta name="keywords" content="Do you wanna go out with me,A website to invite your lover for a date,Collegeek,Collegeek.com,learning programing,programming tutorial,tools,Live_DHTML,Convertor,microprocessor"/>
-    <link rel="stylesheet" href="./style.css">
-    <!-- icons -->
-    <link rel="apple-touch-icon" sizes="57x57" href="image/icons/favicon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="image/icons/favicon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="image/icons/favicon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="image/icons/favicon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="image/icons/favicon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="image/icons/favicon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="image/icons/favicon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="image/icons/favicon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="image/icons/favicon-180x180.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="image/icons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="image/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="image/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="image/icons/favicon-192x192.png">
-    <link rel="shortcut icon" type="image/x-icon" href="image/icons/favicon.ico">
-    <link rel="icon" type="image/x-icon" href="image/icons/favicon.ico">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="image/icons/favicon-144x144.png">
-    <meta name="msapplication-config" content="image/icons/browserconfig.xml">
-    <link rel="manifest" href="image/icons/manifest.json">
-    <!-- icons -->
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EWCZHDCG9"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-3EWCZHDCG9');
-    </script>
-  </head>
-  <body>
-        <div id="ask" class="container">
-            <div >
-                <h1 class = "header_text">Do you wanna go out with me?</h1>
-            </div>
-            <div class="gif_container">
-                <img src="image/ask.gif" alt="Cute animated illustration">
-            </div>
-            <div class = "buttons">
-                <button class="btn" id = "yesButton" onclick="nextPage()">Yes</button>
-                <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">No</button>
-            </div>
-            <video id="novideo" width="0" height="0" controls>
-                <source src="image/SadMoment.mp4" 
-                   type="video/mp4">
-            </video>
+    <meta name="description" content="Do you wanna go out with me? A website to invite your lover for a date"/>
+    <meta name="keywords" content="Do you wanna go out with me, dating invitation website"/>
+    <style>
+        body { height: 90vh; background-color: #F8C8DC; }
+        #ans { display: none; }
+        #ansvideo, #novideo { visibility: hidden; }
+        #noButton { position: absolute; margin-left: 150px; transition: 0.5s; }
+        #yesButton { position: absolute; margin-right: 150px; }
+        .header_text { font-family: 'Nunito'; font-size: 50px; font-weight: bold; 
+                      color: black; text-align: center; margin-top: 20px; margin-bottom: 0px; }
+        .buttons { display: flex; flex-direction: row; justify-content: center; 
+                  align-items: center; margin-top: 20px; margin-left: 20px; }
+        .btn { background-color: #FFB6C1; color: white; padding: 15px 32px; 
+              text-align: center; display: inline-block; font-size: 16px; 
+              margin: 4px 2px; cursor: pointer; border: none; border-radius: 12px; 
+              transition: background-color 0.3s ease; }
+        .btn:hover { background-color: #ff8e9f; }
+        .gif_container { display: flex; justify-content: center; align-items: center; }
+        .qrimage { display: block; margin-left: auto; margin-right: auto; 
+                  max-width: 350px; height: auto; }
+        img { max-width: 100%; height: auto; cursor: pointer; }
+        @media (max-width: 600px) {
+            .header_text { font-size: 40px; }
+            .qrimage { max-width: 50%; padding-left: 25%; }
+        }
+    </style>
+</head>
+<body>
+    <div id="ask" class="container">
+        <div>
+            <h1 class="header_text">Do you wanna go out with me?</h1>
         </div>
-        <div id="ans" class="container">
-            <div >
-                <h1 class = "header_text">Yeeeyyyy!!</h1>
-            </div>
-            <div class="gif_container">
-                <img src="image/ans.gif" alt="Cute animated illustration">
-            </div>
-            <div class="gif_container qrimage">
-                <img src="image/siddharth_gabu_qr.png" onclick="window.open('https://www.instagram.com/siddharth_gabu/')" alt="Insta Profile QR code">
-            </div>
-            <video id="ansvideo" width="0" height="0" controls>
-                <source src="image/KidsCheering.mp4" 
-                   type="video/mp4">
-            </video>
+        <div class="gif_container">
+            <img src="image/ask.gif" alt="Cute animated illustration">
         </div>
-    </body> 
+        <div class="buttons">
+            <button class="btn" id="yesButton" onclick="nextPage()">Yes</button>
+            <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">No</button>
+        </div>
+        <video id="novideo" width="0" height="0" controls>
+            <source src="image/SadMoment.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div id="ans" class="container">
+        <div>
+            <h1 class="header_text">Yeeeyyyy!!</h1>
+        </div>
+        <div class="gif_container">
+            <img src="image/ans.gif" alt="Cute animated illustration">
+        </div>
+        <div class="gif_container qrimage">
+            <img src="image/siddharth_gabu_qr.png" 
+                 onclick="window.open('https://www.instagram.com/siddharth_gabu/')" 
+                 alt="Insta Profile QR code">
+        </div>
+        <video id="ansvideo" width="0" height="0" controls>
+            <source src="image/KidsCheering.mp4" type="video/mp4">
+        </video>
+    </div>
+
     <script>
-
-        var debounce = function(fn, t = 1000) {
-            let timer;
-            return function(...args) {
-                clearTimeout(timer);
-                timer = setTimeout(() => fn(...args), t);
-            }
-        };
-
-
-        function playAudio()
-        {
+        function playAudio() {
             document.getElementById('novideo').play();
         }
 
         function nextPage() {
-            //window.location.href = "yes.html";
             document.getElementById('ans').style.display = 'block';
             document.getElementById('ask').style.display = 'none';
             document.getElementById('novideo').pause();
@@ -97,12 +78,13 @@
         }
 
         function moveButton() {
-            var x = Math.random() * (window.innerWidth - document.getElementById('noButton').offsetWidth);
-            var y = Math.random() * (window.innerHeight - document.getElementById('noButton').offsetHeight);
-            document.getElementById('noButton').style.left = `${x}px`;
-            document.getElementById('noButton').style.top = `${y}px`;
+            const noButton = document.getElementById('noButton');
+            const x = Math.random() * (window.innerWidth - noButton.offsetWidth);
+            const y = Math.random() * (window.innerHeight - noButton.offsetHeight);
+            noButton.style.left = `${x}px`;
+            noButton.style.top = `${y}px`;
             playAudio();
         }
-
-    </script> 
+    </script>
+</body>
 </html>
