--- a/index.html
+++ b/index.html
@@ -1,64 +1,101 @@
 <!DOCTYPE html>
 <html lang="en-IN" dir="ltr">
 <head>
-    <title>Do you wanna go out with me?</title>
+    <title>Do you want to be my valentine?</title>
     <meta charset="utf-8">
-    <meta name="author" content="SidPro"/>
+    <meta name="author" content="Your Name"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <meta name="description" content="Do you wanna go out with me? A website to invite your lover for a date"/>
-    <meta name="keywords" content="Do you wanna go out with me, dating invitation website"/>
+    <meta name="description" content="Do you want to be my valentine? A cute Valentine's invitation website"/>
+    <meta name="keywords" content="valentine invitation, be my valentine, cute valentine website"/>
     <style>
-        body { height: 90vh; background-color: #F8C8DC; }
-        #ans { display: none; }
-        #ansvideo, #novideo { visibility: hidden; }
-        #noButton { position: absolute; margin-left: 150px; transition: 0.5s; }
-        #yesButton { position: absolute; margin-right: 150px; }
-        .header_text { font-family: 'Nunito'; font-size: 50px; font-weight: bold; 
-                      color: black; text-align: center; margin-top: 20px; margin-bottom: 0px; }
-        .buttons { display: flex; flex-direction: row; justify-content: center; 
-                  align-items: center; margin-top: 20px; margin-left: 20px; }
-        .btn { background-color: #FFB6C1; color: white; padding: 15px 32px; 
-              text-align: center; display: inline-block; font-size: 16px; 
-              margin: 4px 2px; cursor: pointer; border: none; border-radius: 12px; 
-              transition: background-color 0.3s ease; }
-        .btn:hover { background-color: #ff8e9f; }
-        .gif_container { display: flex; justify-content: center; align-items: center; }
-        .qrimage { display: block; margin-left: auto; margin-right: auto; 
-                  max-width: 350px; height: auto; }
-        img { max-width: 100%; height: auto; cursor: pointer; }
+        body { 
+            height: 90vh; 
+            background-color: #F8C8DC; 
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #ans { 
+            display: none; 
+            text-align: center;
+        }
+        #ansvideo, #novideo { 
+            visibility: hidden; 
+        }
+        #noButton { 
+            position: absolute; 
+            transition: 0.5s; 
+        }
+        .header_text { 
+            font-family: 'Arial', sans-serif; 
+            font-size: 2.5em; 
+            font-weight: bold; 
+            color: #FF69B4; 
+            text-align: center; 
+            margin: 20px 0;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+        }
+        .buttons { 
+            display: flex; 
+            gap: 20px;
+            margin-top: 30px;
+            position: relative;
+        }
+        .btn { 
+            background-color: #FF69B4; 
+            color: white; 
+            padding: 15px 32px; 
+            font-size: 1.2em; 
+            border: none; 
+            border-radius: 25px; 
+            cursor: pointer; 
+            transition: transform 0.3s, background-color 0.3s;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .btn:hover { 
+            background-color: #FF1493; 
+            transform: scale(1.05);
+        }
+        .gif_container { 
+            max-width: 400px; 
+            margin: 20px auto;
+        }
+        img { 
+            max-width: 100%; 
+            height: auto; 
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+        }
         @media (max-width: 600px) {
-            .header_text { font-size: 40px; }
-            .qrimage { max-width: 50%; padding-left: 25%; }
+            .header_text { font-size: 1.8em; }
+            .btn { padding: 12px 24px; }
         }
     </style>
 </head>
 <body>
     <div id="ask" class="container">
         <div>
-            <h1 class="header_text">Do you wanna go out with me?</h1>
+            <h1 class="header_text">Do you want to be my valentine? 💖</h1>
         </div>
         <div class="gif_container">
-            <img src="image/ask.gif" alt="Cute animated illustration">
+            <img src="image/ask.gif" alt="Cute Valentine animation">
         </div>
         <div class="buttons">
-            <button class="btn" id="yesButton" onclick="nextPage()">Yes</button>
-            <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">No</button>
+            <button class="btn" id="yesButton" onclick="nextPage()">Yes! 😍</button>
+            <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">Maybe... 😅</button>
         </div>
         <video id="novideo" width="0" height="0" controls>
             <source src="image/SadMoment.mp4" type="video/mp4">
         </video>
     </div>
+    
     <div id="ans" class="container">
         <div>
-            <h1 class="header_text">Yeeeyyyy!!</h1>
+            <h1 class="header_text">Yay! You made my day! 💝</h1>
         </div>
         <div class="gif_container">
-            <img src="image/ans.gif" alt="Cute animated illustration">
-        </div>
-        <div class="gif_container qrimage">
-            <img src="image/siddharth_gabu_qr.png" 
-                 onclick="window.open('https://www.instagram.com/siddharth_gabu/')" 
-                 alt="Insta Profile QR code">
+            <img src="image/ans.gif" alt="Happy Valentine animation">
         </div>
         <video id="ansvideo" width="0" height="0" controls>
             <source src="image/KidsCheering.mp4" type="video/mp4">
@@ -79,10 +116,12 @@
 
         function moveButton() {
             const noButton = document.getElementById('noButton');
-            const x = Math.random() * (window.innerWidth - noButton.offsetWidth);
-            const y = Math.random() * (window.innerHeight - noButton.offsetHeight);
-            noButton.style.left = `${x}px`;
-            noButton.style.top = `${y}px`;
+            const maxX = window.innerWidth - noButton.offsetWidth;
+            const maxY = window.innerHeight - noButton.offsetHeight;
+            
+            noButton.style.left = Math.random() * maxX + 'px';
+            noButton.style.top = Math.random() * maxY + 'px';
+            noButton.textContent = ['Try again?', 'Are you sure?', 'Maybe later?', 'Think twice!'][Math.floor(Math.random()*4)];
             playAudio();
         }
     </script>
