--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Jeewal"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <meta name="description" content="Do you want to be my Valentine? A website to invite your lover  for a Valentine."/>
+    <meta name="description" content="Do you want to be my Valentine? A website to invite your lover for a date by Collegeek online learning platform."/>
     <meta name="keywords" content="Do you want to be my Valentine, A website to invite your lover for a Valentine"/>
     <link rel="stylesheet" href="./style.css">
     <!-- icons -->
@@ -51,13 +51,17 @@
             100% { transform: translateY(-10vh) translateX(20vw); opacity: 0; }
         }
 
-        /* Drifting clouds */
+        /* Drifting clouds with messages */
         .cloud {
             position: absolute;
             color: white;
-            font-size: 60px;
+            font-size: 24px;
+            font-family: 'Arial', sans-serif;
+            font-weight: bold;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             animation: drift 20s linear infinite;
             opacity: 0.8;
+            white-space: nowrap;
         }
 
         @keyframes drift {
@@ -79,6 +83,24 @@
             0% { transform: scale(1); opacity: 1; }
             100% { transform: scale(10); opacity: 0; }
         }
+
+        /* Celebration screen styling */
+        #ans {
+            display: none;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+
+        #ans .header_text {
+            z-index: 2;
+            position: relative;
+        }
+
+        #ans .gif_container {
+            z-index: 2;
+            position: relative;
+        }
     </style>
 </head>
 <body>
@@ -99,7 +121,7 @@
     </div>
     <div id="ans" class="container">
         <div>
-            <h1 class="header_text">Yeeeyyyy!!</h1>
+            <h1 class="header_text">Yayyyy!!<3</h1>
         </div>
         <div class="gif_container">
             <img src="image/ans.gif" alt="Cute animated illustration">
@@ -150,12 +172,13 @@
         }
 
         function startClouds() {
+            const messages = ["Thank You 💖", "I Love You! 💕", "You're Amazing! 🌟", "Forever Yours 💌"];
             setInterval(() => {
                 const cloud = document.createElement('div');
                 cloud.classList.add('cloud');
-                cloud.innerHTML = '☁️';
-                cloud.style.top = Math.random() * 50 + '%';
-                cloud.style.fontSize = Math.random() * 60 + 40 + 'px';
+                cloud.textContent = messages[Math.floor(Math.random() * messages.length)];
+                cloud.style.top = Math.random() * 50 + 20 + '%'; // Ensure clouds are visible
+                cloud.style.fontSize = Math.random() * 24 + 20 + 'px';
                 document.body.appendChild(cloud);
 
                 setTimeout(() => {
