--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="author" content="Jeewal"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <meta name="description" content="Do you want to be my Valentine? A website to invite your lover for a date by Collegeek online learning platform."/>
-    <meta name="keywords" content="Do you want to be my Valentine, A website to invite your lover for a Valentine"/>
+    <meta name="description" content="Do you want to be my Valentine? A website to invite Dumbo for a Valentine"/>
+    <meta name="keywords" content="Do you want to be my Valentine, A website to invite Dumbo for a Valentine"/>
     <link rel="stylesheet" href="./style.css">
     <!-- icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="image/icons/favicon-57x57.png">
