--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         gtag('config', 'G-3EWCZHDCG9');
     </script>
     <style>
+        
+        #dateButton:disabled {
+    opacity: 0.5; /* Faded look */
+    cursor: not-allowed;
+}
         /* Floating hearts */
         .heart {
             position: absolute;
