--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
             <img src="image/ans.gif" alt="Cute animated illustration">
         </div>
         <div>
-            <button class="date-button" onclick="planDate()">Click here to plan the Date</button>
+            
+            <button class="date-button" id="dateButton" onclick="planDate()" disabled>Click here to plan the Date</button>
+
         </div>
         <video id="ansvideo" width="0" height="0" controls>
             <source src="image/KidsCheering.mp4" type="video/mp4">
