--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
     </div>
     <div id="ans" class="container">
         <div>
-            <h1 class="header_text">Yayyyy!!<3</h1>
+            <h1 class="header_text">Yayyyy!</h1>
+            <h1>Look around !</h1>
         </div>
         <div class="gif_container">
             <img src="image/ans.gif" alt="Cute animated illustration">
