--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div>
             
             <button class="date-button" id="dateButton" onclick="planDate()" disabled>Click here to plan the Date</button>
-
+            <a href="/Rose-Day/">Visit Rose Day Page</a>
         </div>
         <video id="ansvideo" width="0" height="0" controls>
             <source src="image/KidsCheering.mp4" type="video/mp4">
