--- a/index.html
+++ b/index.html
@@ -3,74 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Hey Love ✨</title>
     <link rel="icon" type="img/jpg" href="https://c4.wallpaperflare.com/wallpaper/812/187/770/kimi-no-na-wa-tachibana-taki-miyamizu-mitsuha-anime-wallpaper-preview.jpg">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;700&display=swap');
-        
-        body, html {
-            font-family: 'Great Vibes', cursive;
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            background: linear-gradient(to right, #53efbe , #3b94ef);
-            overflow: hidden;
-        }
 
-        h1 {
-            text-align: right;
-            margin-top: 550px;
-            width: auto;
-            font-size: 18px;
-            font-family: 'Courier New', Courier, monospace;
-        }
-
-        /* Rest of your CSS styles */
-        .rose {
-            position: relative;
-            width: 100px;
-            height: 100px;
-            top: 50%;
-            left: 50%;
-            margin-left: -50px;
-            margin-top: -50px;
-        }
-
-        /* ... (all your existing CSS rules here) ... */
-
-        #prompt {
-            text-transform: none;
-            font-family: 'Great Vibes', cursive;
-            color: white;
-            font-size: 2rem;
-            width: max-content;
-            font-weight: lighter;
-            margin-left: -5rem;
-            position: absolute;
-            top: 60%;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-    </style>
 </head>
 <body>
-    <div class="rose">
-        <!-- 30 petal divs -->
-        <div class="petal"></div>
-        <!-- ... (all 30 petal divs) ... -->
-        <div class="text">
-            <span>Happy Rose Day Shrabada ✨</span>
-        </div>
-    </div>
-    <span id="prompt">Touch the rose</span>
+  
+<div class="rose">
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="petal"></div>
+  <div class="text">
+      <span>Happy Rose Day Shrabada ✨</span>
+  </div>
+</div>
+<span id="prompt">Touch the rose</span>
 
-    <div style="display: none;">
-        <audio autoplay loop controls>
-            <source src="https://heyyouu.netlify.app/song.mp3" type="audio/mp3">
-        </audio>
-    </div>
+<div style="display: none;">
+  <audio autoplay="" loop="" controls="">
+    <source src="https://heyyouu.netlify.app/song.mp3" type="audio/mp3">
+  </audio>
+</div>
 
-    <h1>By Your one and only Love Cheewu 💖</h1>
+<h1>By Your one and only Love Cheewu 💖</h1>
 </body>
+
 </html>
